# Keyboard-Controls-For-Skate

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  controller_config.json
src/: config.cpp  config.h  hooks.cpp  hooks.h  logic.cpp  logic.h  main.cpp  mapping.cpp  mapping.h
